deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dec4-pod
spec:
  containers:
  - name: 1203-container
    image: lorettayao827/dec4:tag
    ports:
    - containerPort: 3000
